/*
 * Copyright Elasticsearch B.V. and/or licensed to Elasticsearch B.V. under one
 * or more contributor license agreements. Licensed under the Elastic License
 * 2.0 and the Server Side Public License, v 1; you may not use this file except
 * in compliance with, at your election, the Elastic License 2.0 or the Server
 * Side Public License, v 1.
 */

import { renderCustomToolbar } from './render_custom_toolbar';

describe('renderCustomToolbar', () => {
  it('should render successfully', () => {
    expect(
      renderCustomToolbar(
        {
          hasRoomForGridControls: true,
          columnControl: 'column',
          columnSortingControl: 'columnSorting',
          displayControl: 'display',
          fullScreenControl: 'fullScreen',
          keyboardShortcutsControl: 'keyboard',
        },
        { additionalControls: 'additional' }
      )
    ).toMatchSnapshot();
  });

  it('should render correctly for smaller screens', () => {
    expect(
      renderCustomToolbar(
        {
          hasRoomForGridControls: false,
          columnControl: 'column',
          columnSortingControl: 'columnSorting',
          displayControl: 'display',
          fullScreenControl: 'fullScreen',
          keyboardShortcutsControl: 'keyboard',
        },
        { additionalControls: 'additional' }
      )
    ).toMatchSnapshot();
  });
});
